# gview

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
platform/win/: resources.rc
src/: gapp.cc  gapp.h  gframe.cc  gframe.h  gguf_reader.cc  gguf_reader.h  gui.h  main.cc
